[package]
name = "rtpl"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits="0.2"    # For Float trait
rand = "0.8"        # For random sampling
kiddo = "5.0"       # For kd-trees
special = "0.11"     # For Gamma function

[dev-dependencies]
macroquad = "0.3"   # Used only for animations in examples
k = "0.32"
urdf-rs = "0.9.0"
json = "0.12.4"